# Zafkiel

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
engine/: CMakeLists.txt
engine/parser/: CMakeLists.txt
engine/parser/src/: code_generate.cpp  code_generate.h  cursor.cpp  cursor.h  llvm_headers.h  main.cpp  mustache_manager.cpp  mustache_manager.h  nodes.cpp  nodes.h  parser.cpp  parser.h  utils.cpp  utils.h
engine/parser/templates/: class_refl.mustache  enum_refl.mustache  header.mustache  impl.mustache  refl.mustache
engine/reflection/: Any.cpp  Any.h  Any.tpp  Register.cpp  Register.h  Register.tpp  Type.cpp  Type.h  Type.tpp  make_any.h  make_any.tpp  refl.h  variable_traits.h
engine/runtime/: CMakeLists.txt
engine/runtime/src/ECS/: basic_world.cpp  basic_world.h  basic_world.tpp  components.h  entity.h  sparse_set.h  sparse_set.tpp  world.h  world.tpp
engine/runtime/src/base/: vector3.h
engine/runtime/src/debug/: log.cpp  log.h
engine/runtime/src/file/: file_system.cpp  file_system.h
engine/runtime/src/precompile/: pch.h  refl_files.txt  refl_files.txt.in
engine/runtime/src/reflection/: any.cpp  any.h  any.tpp  base_type.cpp  base_type.h  base_type.tpp  make_any.h  make_any.tpp  property.h  property.tpp  refl.h  register.cpp  register.h  register.tpp  register_base_type.cpp  register_base_type.h  register_base_type.tpp  register_property.h  register_property.tpp  type.cpp  type.h  variable_traits.h
engine/runtime/src/script/: script_engine.cpp  script_engine.h  script_glue.cpp  script_glue.h
engine/runtime/src/utils/: singleton.h  utils.cpp  utils.h
engine/script_core/: Base.cs  CMakeLists.txt  Components.cs  Entity.cs  InternalCalls.cs  Log.cs
engine/utils/: Singleton.h
sandbox/: CMakeLists.txt  main.cpp
sandbox/assets/scripts/: CMakeLists.txt  Sandbox.cs
sandbox/src/: main.cpp  main.h
tests/: CMakeLists.txt  test_macros.cmake
tests/ECS/: CMakeLists.txt  world.cpp
tests/reflection/: CMakeLists.txt  refl.cpp
